update edit form

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -5,8 +5,8 @@
     <%= form.text_field :last_name %><br>
     <%= form.label :email %><br>
     <%= form.text_field :email %><br>
-    <%= form.label :phone_number %><br>
-    <%= form.text_field :phone_number %> <br>
+    <%= form.label :phone %><br>
+    <%= form.text_field :phone %> <br>
     <%= form.label :bio %><br>
     <%= form.text_area :bio %><br> 
     <%= form.label :avatar%><br>
