--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,13 @@
 <p><%= @user.email %>  //// <%= @user.phone %></p>
 <p><%= @user.bio %></p>
 
+<% GearItem.where(:user_id => @user.id).each do |item| %>
+    <div>
+   <p> <%=link_to item.name gear_item_path(@gear_item) %></p>
+ 
+    </div>
+  <% end %>
+
 <ul>
   <li><%= link_to "Edit", edit_user_path(@user) %></li>
   <li><%= link_to "Index", users_path %></li>
