update users#show view

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,9 +6,9 @@
 <p><%= @user.email %>  //// <%= @user.phone %></p>
 <p><%= @user.bio %></p>
 
-<% GearItem.where(:user_id => @user.id).each do |item| %>
+<% @user.gear_items.each do |item| %>
     <div>
-   <p> <%=link_to item.name gear_item_path(@gear_item) %></p>
+   <p> <%=link_to item.name, gear_item_path %></p>
  
     </div>
   <% end %>
