--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
 
 <% @user.gear_items.each do |item| %>
     <div>
-   <p> <%=link_to item.name, gear_item_path %></p>
+   <p> <%=link_to item.name, gear_item_path(:id => item.id) %></p>
  
     </div>
   <% end %>
