--- a/app/views/gear_items/show.html.erb
+++ b/app/views/gear_items/show.html.erb
@@ -1,10 +1,9 @@
 <p style="color: green"><%= notice %></p>
 
 <%= render @gear_item %>
-
+<%= link_to "Back to gear items", gear_items_path %>
 <div>
-  <%= link_to "Edit this gear item", edit_gear_item_path(@gear_item) %> |
-  <%= link_to "Back to gear items", gear_items_path %>
-
-  <%= button_to "Destroy this gear item", @gear_item, method: :delete %>
+<% if @gear_item.owner.id == current_user.id%>
+  <%= button_to "Edit this gear item", edit_gear_item_path(@gear_item) %> <%= button_to "Destroy this gear item", @gear_item, method: :delete %>
+<% end %>
 </div>
