--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Teko:wght@400;700&display=swap"
-      rel="stylesheet">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous">
+   
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
   <h1> <%= link_to "Central Kentucky Bikepacking Gear Library", root_path %> </h1>
+<% if current_user.present? %>
+ Signed In: <%= current_user.full_name %>
+<%= link_to "Sign out", users.sign_out_path%> 
 
+  <% else %>
+<%= link_to "Sign in", users.sign_in_path %> 
+<%= link_to "Sign up", new_user_path%>
+<% end %>
     <%= yield %>
   </body>
 </html>
