--- a/app/views/gear_items/edit.html.erb
+++ b/app/views/gear_items/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>Editing gear item</h1>
 
 <%= render "form", gear_item: @gear_item %>
-
+<%= button_to "Destroy this gear item", @gear_item, method: :delete %>
 <br>
 
 <div>
