--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -7,6 +7,8 @@
     <%= form.text_field :email %><br>
     <%= form.label :phone %><br>
     <%= form.text_field :phone %> <br>
+    <%= form.label :social_media %><br>
+    <%= form.text_field :social_media%><br>
     <%= form.label :bio %><br>
     <%= form.text_area :bio %><br> 
     <%= form.label :avatar%><br>
