--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,18 +8,57 @@
    
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+  
   </head>
 
-  <body>
-  <h1> <%= link_to "Central Kentucky Bikepacking Gear Library", root_path %> </h1>
-<% if current_user.present? %>
- Signed In: <%= current_user.full_name %>
-<%= link_to "Sign out", users.sign_out_path%> 
+  <body class="bg-light">
+    
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+     <%= link_to "Central Kentucky Bikepacking Gear Library", root_path, :class => "display-4 navbar-brand text-secondary" %>
 
-  <% else %>
-<%= link_to "Sign in", users.sign_in_path %> 
-<%= link_to "Sign up", new_user_path%>
-<% end %>
-    <%= yield %>
+      <% if current_user.present? %>
+        
+        <div class="collapse navbar-collapse flex-row" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            
+            <li class="nav-item">
+              <%=link_to "Members", :users, :class => "nav-link"  %>
+            </li>
+
+            <li class="nav-item">
+              <%=link_to "Gear", :gear_items, :class => "nav-link"  %>
+            </li>
+            
+            <li class="nav-item">
+              <%=link_to "Profile", user_path(:id => current_user.id), :class => "nav-link"  %>
+            </li>
+            
+            <li class="nav-item">
+              <%= link_to "Sign out", users.sign_out_path, :class => "nav-link float-right"  %>
+            </li>
+        </div>  
+      <% else %>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+              
+            <li class="nav-item">
+              <%= link_to "Sign up", new_user_path, :class => "nav-link"%>
+            </li>
+                           
+            <li class="nav-item">
+              <%= link_to "Sign in", users.sign_in_path, :class => "nav-link" %> 
+            </li>
+        </div>   
+      
+      <%end%>
+    
+    </nav>
+    <div class="container-fluid">
+    
+      <%= yield %>
+    
+    </div>
+
   </body>
 </html>
