--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,10 +17,14 @@
   <%= link_to "Edit Profile", edit_user_path(@user), :class => "text-primary" %>
   <% end %>
 <p><%= @user.bio %></p>
-<%= link_to "New gear item", new_gear_item_path %>
+<% if @user.id == current_user.id || current_user.is_admin?%>
+  <p> <%= link_to "New gear item", new_gear_item_path %></p>
+  <% end %>
 <% @user.gear_items.each do |item| %>
     <div>
+     <% if item.item_images.present? %>
+    <img src="<%= (url_for(item.item_images)) %>" class="img-fluid rounded-circle"><br>
+<% end %>
    <p> <%=link_to item.name, gear_item_path(:id => item.id) %></p>
- 
     </div>
   <% end %>
