--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,13 @@
 
   <body class="bg-light">
     
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-     <%= link_to "Central Kentucky Bikepacking Gear Library", root_path, :class => "display-4 navbar-brand text-secondary" %>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+     <%= link_to "Central Kentucky Bikepacking Gear Library", root_path, :class => "navbar-brand text-secondary" %>
 
       <% if current_user.present? %>
         
-        <div class="collapse navbar-collapse flex-row" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+          <ul class="navbar-nav  mr-auto">
             
             <li class="nav-item">
               <%=link_to "Members", :users, :class => "nav-link"  %>
@@ -28,14 +28,15 @@
             <li class="nav-item">
               <%=link_to "Gear", :gear_items, :class => "nav-link"  %>
             </li>
-            
+         
             <li class="nav-item">
               <%=link_to "Profile", user_path(:id => current_user.id), :class => "nav-link"  %>
             </li>
             
-            <li class="nav-item">
+            <li class="nav-item ">
               <%= link_to "Sign out", users.sign_out_path, :class => "nav-link float-right"  %>
             </li>
+          
         </div>  
       <% else %>
 
@@ -54,7 +55,7 @@
       <%end%>
     
     </nav>
-    <div class="container-fluid">
+    <div class="container-fluid" >
     
       <%= yield %>
     
