--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,11 +30,11 @@
             </li>
          
             <li class="nav-item">
-              <%=link_to "Profile", user_path(:id => current_user.id), :class => "nav-link pull-right"  %>
+              <%=link_to "Profile", user_path(:id => current_user.id), :class => "nav-link"  %>
             </li>
             
             <li class="nav-item ">
-              <%= link_to "Sign out", users.sign_out_path, :class => "nav-link pull-right"  %>
+              <%= link_to "Sign out", users.sign_out_path, :class => "nav-link float-right"  %>
             </li>
           
         </div>  
@@ -63,3 +63,9 @@
 
   </body>
 </html>
+
+
+
+
+
+
