--- a/app/views/gear_items/_form.html.erb
+++ b/app/views/gear_items/_form.html.erb
@@ -27,6 +27,12 @@
   </div>
 
   <div>
+  <div>
+  <%= form.label 'borrowed by' %>
+  <%= form.select  :borrower, User.all.collect { |user| [user.full_name, user.id] }, {:include_blank => ''}  %>
+  </div>
+  </div>
+  <div>
     <%= form.label :item_images %>
     <%= form.file_field :item_images, accept: 'image/png, image/gif, image/jpeg', direct_upload: true %>
   </div>
