--- a/app/views/gear_items/_gear_item.html.erb
+++ b/app/views/gear_items/_gear_item.html.erb
@@ -2,29 +2,31 @@
   
 <div class="card bg-primary border border-secondary border-2">
   <% if gear_item.item_images.present? %>
-    <%= image_tag(gear_item.item_images, :size => "260x180", :class => "card-img-top img-fluid") %>
+    <%= cl_image_tag(gear_item.item_images.key, :width=>100, :height=>150, :class => "card-img-top p-1") %>
   <% end %>
   <div class="card-body">
     <p class="card-text"><p>
     <%= link_to gear_item.name , gear_item, :class => "display-6 link-secondary"  %>
   </p>
   <p>
-   
-  </p>
-  <p>
     <strong>Description:</strong>
     <%= gear_item.description %>
   </p>
 
-  <p>
-    <strong>Is checked out:</strong>
-    <%= gear_item.is_checked_out %>
-  </p>
-  
+
   <p>
     <strong>Owned by:</strong>
     <%=link_to gear_item.owner.full_name, user_path(gear_item.owner.id) %>
-  </p></p>
-  </div>
+  </p>
+  <p>
+    <% if !gear_item.borrower?%>
+    <strong>Item Available</strong>
+    <% else %>
+    <strong>Checked out by:</strong> <%=link_to User.find_by(:id => gear_item.borrower).full_name, user_path(gear_item.borrower)%>
+    <% end%>
+  </p>
+  
+
+</div>
 </div>
 </div>
