--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,20 +7,28 @@
     <%= csp_meta_tag %>
    
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>  
     <%= javascript_importmap_tags %>
-  
+    
   </head>
 
   <body class="bg-light">
-    
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-     <%= link_to "Central Kentucky Bikepacking Gear Library", root_path, :class => "navbar-brand text-secondary" %>
+    <div class="container-fluid">
+    <%= link_to "Central Kentucky Bikepacking Gear Library", root_path, :class => "navbar-brand text-secondary pr-2" %>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav w-100 d-flex justify-content-between ">
+        <section class="d-inline-flex flex-row"> 
+
+          
+
 
       <% if current_user.present? %>
         
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
-          <ul class="navbar-nav  mr-auto">
-            
             <li class="nav-item">
               <%=link_to "Members", :users, :class => "nav-link"  %>
             </li>
@@ -28,20 +36,21 @@
             <li class="nav-item">
               <%=link_to "Gear", :gear_items, :class => "nav-link"  %>
             </li>
-         
+            </section>
+            <section>
+            <span class="d-flex ml-auto">
             <li class="nav-item">
               <%=link_to "Profile", user_path(:id => current_user.id), :class => "nav-link"  %>
             </li>
             
             <li class="nav-item ">
               <%= link_to "Sign out", users.sign_out_path, :class => "nav-link float-right"  %>
+              </span>
             </li>
-          
-        </div>  
-      <% else %>
+          </section>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
+      <% else %>
+        
               
             <li class="nav-item">
               <%= link_to "Sign up", new_user_path, :class => "nav-link"%>
@@ -50,10 +59,13 @@
             <li class="nav-item">
               <%= link_to "Sign in", users.sign_in_path, :class => "nav-link" %> 
             </li>
-        </div>   
+            
+        
       
       <%end%>
-    
+    </ul>
+    </div>
+    </div>
     </nav>
     <div class="container-fluid" >
     
