--- a/app/views/gear_items/index.html.erb
+++ b/app/views/gear_items/index.html.erb
@@ -4,7 +4,7 @@
 
 <div id="gear_items" class="row d-flex justify-content-around align-items-center">
   <% @gear_items.each do |gear_item| %>
-  <div class="col-md-3 col-s-1 d-inline-flex text-center px-3 py-2 rounded">
+  <div class="col-md-3 col-sm-2 col-xs-1 d-flex text-center px-3 py-2 rounded">
     <%= render gear_item %>
   </div>
   <% end %>
